scrollbar: Fixed css on all browsers + overflow-x-auto

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,16 +66,32 @@ body {
   border-radius: 8px;
 }
 
-/* Hide scrollbar for Chrome, Safari, and Opera */
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
+/* Custom scrollbar for Chrome, Safari, and Opera */
+.customized-scrollbar::-webkit-scrollbar {
+  width: 12px; /* Standard width for all scrollbar parts */
+  height: 6px;;
 }
 
-/* Hide scrollbar for IE, Edge, and Firefox */
-.no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+.customized-scrollbar::-webkit-scrollbar-track {
+  background: rgba(241, 241, 241, 0.1); /* Increased opacity for the track */
+  border-radius: 10px; /* Roundness of the track */
 }
+
+.customized-scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.8); /* Semi-transparent grey thumb */
+  border-radius: 10px; /* Roundness of the thumb */
+}
+
+.customized-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgba(85, 85, 85, 0.5); /* Semi-transparent darker grey on hover */
+}
+
+/* Custom scrollbar for IE, Edge, and Firefox */
+.customized-scrollbar {
+  scrollbar-width: thin; /* "auto" or "thin" */
+  scrollbar-color: rgba(136, 136, 136, 0.8) rgba(241, 241, 241, 0.1); /* Thumb color semi-transparent with a more opaque track */
+}
+
 
 .parent {
   /* Remove comment to enable clicking all browsers, not just chrome.
